# agentic-AI-engineering-course

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  course_content.md  feature_request.md
.github/workflows/: ci.yml
docs/: ERA_Platform_SOW_v1.md  SOW.docx  curriculum.md  production.md
era_platform/: secrets.py
era_platform/agents/: __init__.py  base.py  research_agent.py
era_platform/generation/: summarizer.py
era_platform/rag/: __init__.py  bm25.py  embeddings.py  ingestion.py  knowledge_agent.py  qa.py  retrieval.py  store.py
era_platform/state/: schema.py
scripts/: pre_record_check.py
sections/01-welcome-and-the-agentic-ai-landscape/: README.md
sections/02-dev-environment-and-llm-fundamentals/: README.md
sections/03-rag-fundamentals/: README.md  exercise.py  solution.py
sections/04-single-agents-tools-memory-react/: README.md  exercise.py  solution.py
sections/05-langgraph-stateful-agents/: README.md  exercise.py  solution.py
sections/06-multi-agent-systems/: README.md  exercise.py  solution.py
sections/07-advanced-rag/: README.md
sections/08-apis-streaming-serving/: README.md  exercise.py  solution.py
sections/09-observability-evaluation-langsmith/: README.md
sections/10-security-safety-responsible-ai/: README.md
sections/11-docker-deployment/: README.md
sections/12-capstone/: README.md
tests/integration/: conftest.py
tests/unit/: test_knowledge_retrieval.py  test_pre_record_check.py  (+4 more)
(+17 files in other folders)
